[tool.poetry]
name = "ontouml-py"
version = "0.2.0"
description = "OntoUML Python Library"
license = "Apache-2.0"
authors = ["Pedro Paulo F. Barcelos <p.p.favatobarcelos@utwente.nl>"]
readme = "README.md"
homepage = "https://w3id.org/ontouml/ontouml-py"
repository = "https://w3id.org/ontouml/ontouml-py"
documentation = "https://w3id.org/ontouml/ontouml-py/docs"
keywords = ["conceptual-model",
    "ontology",
    "ontology-driven-development",
    "ontouml",
    "ontouml-metamodel",
    "unified-foundational-ontology"]
packages = [{ include = "ontouml_py" }]

[tool.poetry.urls]
"PyPi Project" = "https://pypi.org/project/ontouml-py/"

[tool.poetry.dependencies]
langstring = ">=1,<3"
python = "^3.09"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
# General
loguru = "^0.7.2"
poetry = "^1.7.1"
pre-commit = "^3.6.0"
# Pytest
pytest = ">=7.4.2,<9.0.0"
pytest-lazy-fixture = "^0.6.3"
# Sphynx and plugins
sphinx = "^7.2.6"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-size = "^0.2.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-toolbox = "^3.5.0"
myst-parser = "^2.0.0"
# Flake8 and plugins
flake8 = ">=6.1,<8.0"
flake8-broken-line = "^1.0.0"
flake8-fixme = "^1.1.1"
flake8-implicit-str-concat = "^0.4.0"
flake8-noqa = "^1.3.2"
flake8-return = "^1.2.0"
flake8-unused-arguments = "^0.0.13"
flake8-useless-assert = "^0.4.4"
pep8-naming = "^0.13.3"
pydoclint = ">=0.3.8,<0.5.0"
tryceratops = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.vulture]
paths = ["."]
exclude = ["docs/", "sphinx/", "venv/"]
min_confidence = 61

[tool.mypy]
exclude = ['tests']
strict = true
plugins = "pydantic.mypy"

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pylint]
ignore-paths = '^(tests|docs|sphinx)'
max-line-length = 120
disable = 'E0401'

[tool.isort]
profile = "black"

[tool.flake8]
# OTHER USED PLUGINS: flake8-project
exclude = ["tests/*", "update_documentation.py"]
per-file-ignores = ["ontouml_py/__init__.py:F401", "update_documentation.py:TRY401"]
ignore = "TRY003, DOC301"
